--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@ input, textarea, select {
   border-radius: 10px;
   border: 1px solid var(--border);
   margin-top: 5px;
-  background: white;
-  color: var(--text-dark);
+  background: black;
+  color: var(--text-light);
 }
 
 /* BUTTONS ---------------------------------------------------------- */
@@ -633,3 +633,4 @@ document.getElementById("doVerify").onclick = function(){
 
 
 </html>
+
