--- a/index.html
+++ b/index.html
@@ -206,8 +206,15 @@ footer {
   box-shadow: var(--shadow);
   color: var(--text-light);
 }
+
+@media(max-width:900px) {
+  .app { grid-template-columns: 1fr; }
+}
 </style>
 </head>
+
+<body>
+
 
 <body>
 
