--- a/index.html
+++ b/index.html
@@ -214,6 +214,15 @@ footer {
    ========================================================= */
 
 /* Mobile & Tablet (anything under 900px width) */
+
+  
+
+  /* Cards fit mobile width */
+/* =========================================================
+   📱 FULL RESPONSIVE DESIGN FOR MOBILE + LAPTOPS
+   ========================================================= */
+
+/* Mobile & Tablet (anything under 900px width) */
 @media (max-width: 900px) {
 
   /* App layout becomes vertical */
@@ -658,5 +667,6 @@ doVerify.onclick = function(){
 
 </body>
 </html>
+
 
 
