--- a/index.html
+++ b/index.html
@@ -286,24 +286,52 @@ footer {
 }
 
 /* Extra small screens under 480px */
-@media (max-width: 480px) {
+/* ============================================================
+   📱 FINAL MOBILE FIX — SIDEBAR BECOMES HORIZONTAL SCROLL MENU
+   ============================================================ */
+
+@media (max-width: 900px) {
+
+  /* Collapse the grid into one column */
+  .app {
+    grid-template-columns: 1fr !important;
+  }
+
+  /* Sidebar becomes top horizontal bar */
+  .sidebar {
+    flex-direction: row !important;
+    align-items: center;
+    justify-content: flex-start;
+    overflow-x: auto;
+    white-space: nowrap;
+    padding: 10px;
+    border-radius: 10px;
+    gap: 10px;
+  }
+
+  /* Hide scroll bar */
+  .sidebar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Navigation buttons become inline-block */
   .nav-btn {
-    min-width: 120px;
-    font-size: 12px;
-    padding: 8px;
+    display: inline-block;
+    min-width: 130px;
+    text-align: center;
+    padding: 10px 14px;
+    font-size: 14px;
   }
 
-  h2 {
-    font-size: 20px;
+  /* Main section should not shrink */
+  .main {
+    margin-top: 12px;
   }
 
-  h3 {
-    font-size: 18px;
-  }
-
+  /* Adjust item card thumbnails */
   .thumb {
-    width: 60px;
-    height: 50px;
+    width: 70px;
+    height: 55px;
   }
 }
 
@@ -667,6 +695,7 @@ doVerify.onclick = function(){
 
 </body>
 </html>
+
 
 
 
