--- a/index.html
+++ b/index.html
@@ -381,6 +381,8 @@ footer {
 
         <label>Description</label>
         <textarea id="lostDesc"></textarea>
+        <label>Contact</label>
+        <input id="lostcontact" type="number">
 
         <label>Photo</label>
         <input id="lostPhoto" type="file" accept="image/*">
@@ -412,6 +414,8 @@ footer {
 
         <label>Description</label>
         <textarea id="foundDesc"></textarea>
+         <label>Contact</label>
+        <input id="lostcontact" type="number">
 
         <label>Photo</label>
         <input id="foundPhoto" type="file" accept="image/*">
@@ -670,6 +674,7 @@ doVerify.onclick = function(){
 
 </body>
 </html>
+
 
 
 
