--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,18 +9,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
-/* 🌙 ALWAYS DARK PURPLE THEME */
 :root {
   --bg: #1C1524;
   --card-bg: #261C33;
   --text-dark: #F4EFFF;
   --text-light: #C7B5D9;
   --border: #3D2E4D;
-
   --primary: #CBA3FF;
   --primary-soft: #2F2440;
-  --primary-light: #372950;
-
   --accent-pink: #DDAAFF;
   --shadow: 0 6px 24px rgba(0,0,0,0.45);
 }
@@ -32,9 +29,9 @@ body {
   background: var(--bg);
   color: var(--text-dark);
   padding: 20px;
+  overflow-x: hidden;
 }
 
-/* LAYOUT ---------------------------------------------------------- */
 .app {
   width: 100%;
   max-width: 1120px;
@@ -44,7 +41,6 @@ body {
   gap: 16px;
 }
 
-/* SIDEBAR --------------------------------------------------------- */
 .sidebar {
   background: var(--card-bg);
   border: 1px solid var(--border);
@@ -76,19 +72,13 @@ body {
   color: var(--text-dark);
   font-weight: 600;
   cursor: pointer;
-  transition: 0.25s;
 }
-.nav-btn:hover {
-  box-shadow: 0 0 12px rgba(203,163,255,0.35);
-}
+
 .nav-btn.active {
   background: var(--primary);
   color: white;
-  border-color: var(--primary);
-  box-shadow: 0 0 14px rgba(203,163,255,0.45);
 }
 
-/* MAIN ------------------------------------------------------------ */
 .main {
   background: var(--card-bg);
   border: 1px solid var(--border);
@@ -97,11 +87,9 @@ body {
   box-shadow: var(--shadow);
 }
 
-/* PAGE HANDLING --------------------------------------------------- */
 .page { display: none; }
 .page.active { display: block; }
 
-/* CARDS ----------------------------------------------------------- */
 .glass, .item-card {
   background: var(--card-bg);
   border: 1px solid var(--border);
@@ -111,11 +99,11 @@ body {
   box-shadow: var(--shadow);
 }
 
-/* ITEM CARD ------------------------------------------------------- */
 .item-card {
   display: flex;
   gap: 12px;
 }
+
 .thumb {
   width: 90px;
   height: 70px;
@@ -126,15 +114,13 @@ body {
   justify-content:center;
   align-items:center;
 }
-.thumb img { width: 100%; height:100%; object-fit: cover; }
 
-.item-card:hover {
-  transform: scale(1.01);
-  transition: 0.25s;
-  box-shadow: 0 0 20px rgba(203,163,255,0.4);
+.thumb img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-/* INPUTS ---------------------------------------------------------- */
 label {
   font-size: 13px;
   color: var(--text-light);
@@ -152,49 +138,25 @@ input, textarea, select {
   margin-top: 6px;
 }
 
-input::placeholder, textarea::placeholder {
-  color: rgba(255,255,255,0.45);
-}
-
-/* GLOW EFFECT ----------------------------------------------------- */
-input:focus, textarea:focus, select:focus {
-  outline: none !important;
-  border-color: var(--primary) !important;
-  box-shadow:
-    0 0 10px rgba(203,163,255,0.45),
-    0 0 22px rgba(181,124,255,0.28);
-  transform: translateY(-1px);
-  transition: 0.25s ease;
-}
-
-/* BUTTONS --------------------------------------------------------- */
 .btn {
   padding: 10px 14px;
   border-radius: 10px;
   border: none;
   cursor: pointer;
   font-weight: 600;
-  transition: 0.25s;
 }
+
 .btn.primary {
   background: var(--primary);
   color: white;
 }
-.btn.primary:hover {
-  transform: translateY(-2px);
-  box-shadow:
-    0 0 12px rgba(203,163,255,0.55),
-    0 0 24px rgba(181,124,255,0.35);
-}
 
-/* EMPTY MESSAGE --------------------------------------------------- */
 .empty {
   text-align: center;
   padding: 16px;
   color: var(--text-light);
 }
 
-/* FOOTER ---------------------------------------------------------- */
 footer {
   width: 100%;
   text-align: center;
@@ -207,107 +169,35 @@ footer {
   color: var(--text-light);
 }
 
-
-}
-  /* =========================================================
-   📱 FULL RESPONSIVE DESIGN FOR MOBILE + LAPTOPS
-   ========================================================= */
-
-/* Mobile & Tablet (anything under 900px width) */
-
-  
-
-  /* Cards fit mobile width */
-/* =========================================================
-   📱 FULL RESPONSIVE DESIGN FOR MOBILE + LAPTOPS
-   ========================================================= */
-
-/* Mobile & Tablet (anything under 900px width) */
+/* 📱 RESPONSIVE */
 @media (max-width: 900px) {
-
-  /* App layout becomes vertical */
   .app {
-    grid-template-columns: 1fr !important;
-    padding: 0;
+    grid-template-columns: 1fr;
   }
 
-  /* Sidebar becomes a top bar */
   .sidebar {
-    flex-direction: row !important;
+    flex-direction: row;
     overflow-x: auto;
-    white-space: nowrap;
     gap: 8px;
     padding: 12px;
-    border-radius: 10px;
-    scrollbar-width: none;
-  }
-
-  .sidebar::-webkit-scrollbar {
-    display: none;
-  }
-
-  .sidebar .logo {
-    min-width: 44px;
+    -webkit-overflow-scrolling: touch;
   }
 
   .nav-btn {
     min-width: 140px;
-    text-align: center;
+    min-height: 44px;
     font-size: 14px;
   }
 
-  /* Main content becomes full width */
-  .main {
-    margin-top: 10px;
-    padding: 16px;
-  }
-
-  /* Cards fit mobile width */
-  .glass, .item-card {
-    padding: 14px;
-  }
-
-  /* Item card image smaller */
-  .thumb {
-    width: 70px;
-    height: 60px;
-  }
-
-  /* Forms fit better */
-  input, select, textarea {
-    font-size: 15px;
-  }
-
-  /* Footer spacing */
-  footer {
-    margin-top: 15px;
-    font-size: 14px;
+  .item-card {
+    flex-direction: column;
   }
 }
-
-/* Extra small screens under 480px */
-/* ============================================================
-   📱 FINAL MOBILE FIX — SIDEBAR BECOMES HORIZONTAL SCROLL MENU
-   ============================================================ */
 
 @media (max-width: 480px) {
   .nav-btn {
     min-width: 120px;
     font-size: 12px;
-    padding: 8px;
-  }
-
-  h2 {
-    font-size: 20px;
-  }
-
-  h3 {
-    font-size: 18px;
-  }
-
-  .thumb {
-    width: 60px;
-    height: 50px;
   }
 }
 </style>
@@ -315,12 +205,8 @@ footer {
 
 <body>
 
-
-<body>
-
 <div class="app">
 
-  <!-- SIDEBAR -->
   <div class="sidebar">
     <div style="display:flex; gap:10px; align-items:center;">
       <div class="logo">PU</div>
@@ -330,138 +216,21 @@ footer {
       </div>
     </div>
 
-    <button class="nav-btn active" data-page="home">🏠 Home</button>
-    <button class="nav-btn" data-page="lostForm">📌 Report Lost</button>
-    <button class="nav-btn" data-page="foundForm">📍 Report Found</button>
-    <button class="nav-btn" data-page="lostList">📄 Lost Items</button>
-    <button class="nav-btn" data-page="foundList">📦 Found Items</button>
-    <button class="nav-btn" data-page="verify">🔐 Verify Item</button>
+    <button class="nav-btn active" data-page="home">Home</button>
+    <button class="nav-btn" data-page="lostForm">Report Lost</button>
+    <button class="nav-btn" data-page="foundForm">Report Found</button>
+    <button class="nav-btn" data-page="lostList">Lost Items</button>
+    <button class="nav-btn" data-page="foundList">Found Items</button>
+    <button class="nav-btn" data-page="verify">Verify</button>
   </div>
 
-  <!-- MAIN -->
   <div class="main">
-
-    <!-- HOME -->
     <section id="home" class="page active">
       <div class="glass">
         <h2>Welcome 💜</h2>
-        <p class="muted">Lost something? Found something? This portal helps PU students track items easily.</p>
-      </div>
-
-      <div class="glass">
-        <h3>Recent Activity</h3>
-        <div id="activityFeed"></div>
-        <div id="noAct" class="empty">No activity yet.</div>
+        <p>Lost or found items can be reported here.</p>
       </div>
     </section>
-
-    <!-- LOST FORM -->
-    <section id="lostForm" class="page">
-      <div class="glass">
-        <h2>Report Lost Item</h2>
-
-        <label>Name</label>
-        <input id="lostName">
-
-        <label>Enrollment / ID</label>
-        <input id="lostEnroll">
-
-        <label>Item Name</label>
-        <input id="lostItemName">
-
-        <label>Category</label>
-        <select id="lostCat">
-          <option>ID Card</option><option>Mobile</option><option>Laptop</option>
-          <option>Bag</option><option>Books</option><option>Wallet</option>
-          <option>Charger</option><option>Other</option>
-        </select>
-
-        <label>4-digit Verification Code</label>
-        <input id="lostCode" maxlength="4" type="password">
-
-        <label>Description</label>
-        <textarea id="lostDesc"></textarea>
-        <label>Contact</label>
-        <input id="lostcontact" type="number">
-
-        <label>Photo</label>
-        <input id="lostPhoto" type="file" accept="image/*">
-
-        <button class="btn primary" id="submitLost">Submit</button>
-      </div>
-    </section>
-
-    <!-- FOUND FORM -->
-    <section id="foundForm" class="page">
-      <div class="glass">
-        <h2>Report Found Item</h2>
-
-        <label>Name</label>
-        <input id="foundName">
-
-        <label>Enrollment / ID</label>
-        <input id="foundEnroll">
-
-        <label>Item Name</label>
-        <input id="foundItemName">
-
-        <label>Category</label>
-        <select id="foundCat">
-          <option>ID Card</option><option>Mobile</option><option>Laptop</option>
-          <option>Bag</option><option>Books</option><option>Wallet</option>
-          <option>Charger</option><option>Other</option>
-        </select>
-
-        <label>Description</label>
-        <textarea id="foundDesc"></textarea>
-         <label>Contact</label>
-        <input id="lostcontact" type="number">
-
-        <label>Photo</label>
-        <input id="foundPhoto" type="file" accept="image/*">
-
-        <button class="btn primary" id="submitFound">Submit</button>
-      </div>
-    </section>
-
-    <!-- LOST LIST -->
-    <section id="lostList" class="page">
-      <div class="glass">
-        <h2>Lost Items</h2>
-        <div id="lostContainer"></div>
-        <div id="lostEmpty" class="empty">No lost items yet.</div>
-      </div>
-    </section>
-
-    <!-- FOUND LIST -->
-    <section id="foundList" class="page">
-      <div class="glass">
-        <h2>Found Items</h2>
-        <div id="foundContainer"></div>
-        <div id="foundEmpty" class="empty">No found items yet.</div>
-      </div>
-    </section>
-
-    <!-- VERIFY -->
-    <section id="verify" class="page">
-      <div class="glass">
-        <h2>Verify Lost Item</h2>
-
-        <label>Select Lost Item</label>
-        <select id="verifySelect"></select>
-
-        <label>Enter Code</label>
-        <input id="verifyCode" type="password" maxlength="4">
-
-        <button class="btn primary" id="doVerify">Verify</button>
-
-        <div id="profileBox" class="glass" style="display:none; margin-top:15px;">
-          <h3>Verified Details</h3>
-          <div id="profileDetails"></div>
-        </div>
-      </div>
-    </section>
-
   </div>
 </div>
 
@@ -470,11 +239,9 @@ footer {
 </footer>
 
 <script>
-/* NAVIGATION */
 function navigate(pg){
   document.querySelectorAll(".page").forEach(p => p.classList.remove("active"));
   document.getElementById(pg).classList.add("active");
-
   document.querySelectorAll(".nav-btn").forEach(btn =>
     btn.classList.toggle("active", btn.dataset.page === pg)
   );
@@ -483,200 +250,7 @@ function navigate(pg){
 document.querySelectorAll(".nav-btn").forEach(b =>
   b.addEventListener("click", () => navigate(b.dataset.page))
 );
-
-/* STORAGE */
-let lost = JSON.parse(localStorage.getItem("lost") || "[]");
-let found = JSON.parse(localStorage.getItem("found") || "[]");
-let activity = JSON.parse(localStorage.getItem("activity") || "[]");
-
-function save(){
-  localStorage.setItem("lost", JSON.stringify(lost));
-  localStorage.setItem("found", JSON.stringify(found));
-  localStorage.setItem("activity", JSON.stringify(activity));
-}
-
-/* ACTIVITY FEED */
-function addActivity(text){
-  activity.unshift({text, time:new Date().toLocaleString()});
-  save();
-  renderActivity();
-}
-
-function renderActivity(){
-  const feed = document.getElementById("activityFeed");
-  feed.innerHTML = "";
-
-  if(activity.length == 0){
-    noAct.style.display = "block";
-    return;
-  }
-
-  noAct.style.display = "none";
-
-  activity.slice(0,10).forEach(a=>{
-    let div = document.createElement("div");
-    div.className = "item-card";
-    div.innerHTML = `<div><b>${a.text}</b><br><span class="muted">${a.time}</span></div>`;
-    feed.appendChild(div);
-  });
-}
-
-renderActivity();
-
-/* ADD LOST */
-submitLost.onclick = async function(){
-  let name = lostName.value.trim();
-  let enroll = lostEnroll.value.trim();
-  let itemName = lostItemName.value.trim();
-  let cat = lostCat.value;
-  let code = lostCode.value.trim();
-  let desc = lostDesc.value.trim();
-  let photoFile = lostPhoto.files[0];
-
-  if(!name || !enroll || !itemName || !code){
-    return alert("Please fill all fields");
-  }
-
-  if(code.length != 4 || isNaN(code)){
-    return alert("Code must be 4 digits");
-  }
-
-  let photo = "";
-  if(photoFile){
-    photo = await new Promise(res=>{
-      let r = new FileReader();
-      r.onload=()=>res(r.result);
-      r.readAsDataURL(photoFile);
-    });
-  }
-
-  lost.push({id:Date.now(), name, enroll, itemName, cat, code, desc, photo});
-  save();
-  addActivity("Lost item reported: " + itemName);
-
-  renderLost();
-  updateVerify();
-  alert("Lost item added!");
-
-  lostName.value = lostEnroll.value = lostItemName.value = lostCode.value = lostDesc.value = "";
-  lostPhoto.value = "";
-};
-
-/* ADD FOUND */
-submitFound.onclick = async function(){
-  let name = foundName.value.trim();
-  let enroll = foundEnroll.value.trim();
-  let itemName = foundItemName.value.trim();
-  let cat = foundCat.value;
-  let desc = foundDesc.value.trim();
-  let photoFile = foundPhoto.files[0];
-
-  if(!name || !enroll || !itemName){
-    return alert("Please fill all fields");
-  }
-
-  let photo = "";
-  if(photoFile){
-    photo = await new Promise(res=>{
-      let r = new FileReader();
-      r.onload=()=>res(r.result);
-      r.readAsDataURL(photoFile);
-    });
-  }
-
-  found.push({id:Date.now(), name, enroll, itemName, cat, desc, photo});
-  save();
-  addActivity("Found item reported: " + itemName);
-
-  renderFound();
-  alert("Found item added!");
-
-  foundName.value = foundEnroll.value = foundItemName.value = foundDesc.value = "";
-  foundPhoto.value = "";
-};
-
-/* RENDER LOST LIST */
-function renderLost(){
-  lostContainer.innerHTML = "";
-  if(lost.length === 0){
-    lostEmpty.style.display="block";
-    return;
-  }
-  lostEmpty.style.display="none";
-
-  lost.forEach(i=>{
-    let div = document.createElement("div");
-    div.className = "item-card";
-    div.innerHTML = `
-      <div class="thumb">${i.photo ? `<img src="${i.photo}">` : "No Photo"}</div>
-      <div>
-        <b>${i.itemName}</b> <span class="muted">(${i.cat})</span><br>
-        <span class="muted">Reported by: ${i.name}</span>
-      </div>`;
-    lostContainer.appendChild(div);
-  });
-}
-
-renderLost();
-
-/* RENDER FOUND LIST */
-function renderFound(){
-  foundContainer.innerHTML = "";
-  if(found.length === 0){
-    foundEmpty.style.display="block";
-    return;
-  }
-  foundEmpty.style.display="none";
-
-  found.forEach(i=>{
-    let div = document.createElement("div");
-    div.className = "item-card";
-    div.innerHTML = `
-      <div class="thumb">${i.photo ? `<img src="${i.photo}">` : "No Photo"}</div>
-      <div>
-        <b>${i.itemName}</b> <span class="muted">(${i.cat})</span><br>
-        <span class="muted">Found by: ${i.name}</span>
-      </div>`;
-    foundContainer.appendChild(div);
-  });
-}
-
-renderFound();
-
-/* VERIFY */
-function updateVerify(){
-  verifySelect.innerHTML = "";
-  lost.forEach(i => {
-    verifySelect.innerHTML += `<option value="${i.id}">${i.itemName} (${i.cat})</option>`;
-  });
-}
-updateVerify();
-
-doVerify.onclick = function(){
-  let id = verifySelect.value;
-  let code = verifyCode.value.trim();
-
-  let item = lost.find(i => i.id == id);
-  if(!item) return alert("Item not found");
-
-  if(item.code !== code) return alert("Incorrect code!");
-
-  profileBox.style.display = "block";
-  profileDetails.innerHTML = `
-    <b>Name:</b> ${item.name}<br>
-    <b>ID:</b> ${item.enroll}<br>
-    <b>Item:</b> ${item.itemName}<br>
-    <b>Category:</b> ${item.cat}<br>
-    ${item.photo ? `<img src="${item.photo}" style="width:130px; margin-top:10px; border-radius:10px;">` : ""}
-  `;
-};
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
