--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@ footer {
 
 <footer>
   Created by <b>ARSR Group</b> ☺️
+  <a href="example@example.com>rajeevansh00@gmail.com</a>Contact Owner
 </footer>
 
 <script>
@@ -675,4 +676,5 @@ doVerify.onclick = function(){
 
 </body>
 </html>
+
 
