--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@ doVerify.onclick = function(){
 </script>
  
 <a 
-  href="rajeevansh00@gmail.com
+  href="mailto:rajeevansh00@gmail.com
   ?subject=Lost%20and%20Found%20Inquiry
   &body=Hello%2C%0A%0AI%20am%20contacting%20you%20via%20the%20PU%20Lost%20%26%20Found%20Portal.%0A%0AThank%20you."
   class="floating-contact"
@@ -720,6 +720,7 @@ doVerify.onclick = function(){
 </a>
 </body>
 </html>
+
 
 
 
