--- a/index.html
+++ b/index.html
@@ -204,8 +204,9 @@ footer {
   width: 100%;
   text-align: center;
   margin-top: 20px;
-  padding: 12px;
-  border-radius: 12px;
+  padding: 14px;
+  font-size: 14px;
+  border-radius: 10px;
   background: var(--card-bg);
   border: 1px solid var(--border);
   box-shadow: var(--shadow);
@@ -720,6 +721,7 @@ doVerify.onclick = function(){
 </a>
 </body>
 </html>
+
 
 
 
