--- a/index.html
+++ b/index.html
@@ -240,62 +240,39 @@ footer {
 /* Mobile & Tablet (anything under 900px width) */
 @media (max-width: 900px) {
 
-  /* App layout becomes vertical */
   .app {
-    grid-template-columns: 1fr !important;
-    padding: 0;
+    grid-template-columns: 1fr;
   }
 
-  /* Sidebar becomes a top bar */
+  /* Sidebar as 2-column grid */
   .sidebar {
-    flex-direction: row !important;
-   
-    gap: 8px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
     padding: 12px;
-    border-radius: 10px;
-    scrollbar-width: none;
   }
 
-  .sidebar::-webkit-scrollbar {
-    display: none;
-  }
-
-  .sidebar .logo {
-    min-width: 44px;
+  /* Logo section spans full width */
+  .sidebar > div:first-child {
+    grid-column: 1 / -1;
+    justify-content: center;
+    text-align: center;
   }
 
   .nav-btn {
-    min-width: 140px;
+    width: 100%;
+    min-height: 44px;
+    font-size: 14px;
+    padding: 10px;
     text-align: center;
-    font-size: 14px;
   }
 
-  /* Main content becomes full width */
   .main {
-    margin-top: 10px;
-    padding: 16px;
+    margin-top: 12px;
   }
 
-  /* Cards fit mobile width */
-  .glass, .item-card {
-    padding: 14px;
-  }
-
-  /* Item card image smaller */
-  .thumb {
-    width: 70px;
-    height: 60px;
-  }
-
-  /* Forms fit better */
-  input, select, textarea {
-    font-size: 15px;
-  }
-
-  /* Footer spacing */
-  footer {
-    margin-top: 15px;
-    font-size: 14px;
+  .item-card {
+    flex-direction: column;
   }
 }
 
@@ -340,6 +317,13 @@ footer {
     flex-direction: column;
   }
 }
+  @media (max-width: 480px) {
+  .nav-btn {
+    font-size: 12px;
+    padding: 8px;
+  }
+}
+
 
   /* 📩 FLOATING CONTACT BUTTON */
 .floating-contact {
@@ -746,6 +730,7 @@ doVerify.onclick = function(){
 </a>
 </body>
 </html>
+
 
 
 
